--- a/changgou_service_api/changgou_service_goods_api/pom.xml
+++ b/changgou_service_api/changgou_service_goods_api/pom.xml
@@ -11,5 +11,21 @@
 
     <artifactId>changgou_service_goods_api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.changgou</groupId>
+            <artifactId>changgou_common_db</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.changgou</groupId>
+            <artifactId>changgou_service_goods_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
