admin登录密码加密校验

--- a/changgou_gateway/changgou_gateway_system/src/main/resources/application.yml
+++ b/changgou_gateway/changgou_gateway_system/src/main/resources/application.yml
@@ -19,6 +19,11 @@ spring:
         - Path=/goods/**
         filters:
         - StripPrefix= 1
+        - name: RequestRateLimiter #请求数限流 名字不能随便写
+          args:
+            key-resolver: "#{@ipKeyResolver}"
+            redis-rate-limiter.replenishRate: 1
+            redis-rate-limiter.burstCapacity: 1
       - id: system
         uri: lb://system
         predicates:
@@ -30,6 +35,6 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:6868/eureka
+      defaultZone: http://8.136.15.64:6868/eureka
   instance:
     prefer-ip-address: true
