--- a/changgou_service/changgou_service_system/src/main/resources/application.yml
+++ b/changgou_service/changgou_service_system/src/main/resources/application.yml
@@ -4,16 +4,16 @@ spring:
   application:
     name: system
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.200.128:3306/changgou_system?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://8.136.15.64:3307/changgou_system?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
-    password: root
+    password: wz103023?
   main:
     allow-bean-definition-overriding: true #当遇到同样名字的时候，是否允许覆盖注册
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:6868/eureka
+      defaultZone: http://8.136.15.64:6868/eureka
   instance:
     prefer-ip-address: true
 feign:
@@ -37,3 +37,9 @@ hystrix:
           thread:
             # 熔断器超时时间，默认：1000/毫秒
             timeoutInMilliseconds: 20000
+logging:
+  level:
+    com:
+      changgou:
+        system: debug
+        ibatis: debug
