--- a/changgou_eureka/src/main/resources/application.yml
+++ b/changgou_eureka/src/main/resources/application.yml
@@ -6,3 +6,8 @@ eureka:
     fetch-registry: false #是否从eureka中获取信息
     service-url:
       defaultZone: http://127.0.0.1:${server.port}/eureka/
+  instance:
+    ##指定当前服务多久与服务器连接一次，即心跳时间
+    lease-renewal-interval-in-seconds: 5
+    #告诉服务器，如果当前服务不可用，则从最后一次心跳时间t1开始，到t2为止，如果t2-t1>=30s,则立马将服务进行剔除
+    lease-expiration-duration-in-seconds: 30
