--- a/changgou_canal/src/main/resources/application.properties
+++ b/changgou_canal/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-canal.client.instances.example.host=192.168.200.128
+canal.client.instances.example.host=8.136.15.64
 canal.client.instances.example.port=11111
 canal.client.instances.example.batchSize=1000
-spring.rabbitmq.host=192.168.200.128
+spring.rabbitmq.addresses=8.136.15.64:5672,8.136.15.64:5673,8.136.15.64:5674
