--- a/changgou_service/changgou_service_business/src/main/resources/application.yml
+++ b/changgou_service/changgou_service_business/src/main/resources/application.yml
@@ -5,15 +5,26 @@ spring:
     name: business
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.200.128:3306/changgou_business?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://8.136.15.64:3307/changgou_business?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
-    password: root
+    password: wz103023
   main:
     allow-bean-definition-overriding: true #当遇到同样名字的时候，是否允许覆盖注册
+  rabbitmq:
+    addresses: 8.136.15.64:5672,8.136.15.64:5673,8.136.15.64:5674
+    username: guest
+    password: guest
+    virtual-host: /
+    publisher-confirms: true
+    publisher-returns: true
+    listener:
+      simple:
+        acknowledge-mode: manual
+        prefetch: 10
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:6868/eureka
+      defaultZone: http://8.136.15.64:6868/eureka
   instance:
     prefer-ip-address: true
 feign:
